pi-cluster/cluster/apps/open-media-vault/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: open-media-vault
  namespace: open-media-vault
subsets:
  - addresses:
      - ip: 192.168.50.11
    ports:
      - name: http
        port: 80
        protocol: TCP
      - name: node-exporter
        port: 9100
        protocol: TCP
