pi-cluster/cluster/apps/open-media-vault/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: open-media-vault
  namespace: open-media-vault
  labels:
    app: open-media-vault
spec:
  clusterIP: None
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: node-exporter
      protocol: TCP
      port: 9100
