pi-cluster/cluster/apps/open-media-vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  name: open-media-vault
  namespace: open-media-vault
spec:
  ingressClassName: traefik
  rules:
    - host: "storage.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: open-media-vault
                port:
                  number: 80
          - pathType: Prefix
            path: /metrics
            backend:
              service:
                name: open-media-vault
                port:
                  number: 9100
  tls:
    - hosts:
        - storage.${SECRET_DOMAIN}
      secretName: open-media-vault-tls
